--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,9 @@ webmaster_verifications:
   baidu: # fill in your Baidu verification code
   facebook: # fill in your Facebook verification code
 
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 
