--- a/.github/workflows/pages-deploy copy.yml
+++ b/.github/workflows/pages-deploy copy.yml
@@ -45,13 +45,8 @@ jobs:
           ruby-version: 3.3
           bundler-cache: true
 
-      - name: Clean site directory
-        run: rm -rf _site # 清除舊的 _site 目錄
-
-      - name: Install dependencies and build site
-        run: |
-          bundle install
-          bundle exec jekyll build -d "_site${{ steps.pages.outputs.base_path }}"
+      - name: Build site
+        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: "production"
 
