--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: 'https://Yuehua-Liu.github.io'
+url: 'https://yuehua-liu.github.io'
 
 github:
   username: Yuehua-Liu # change to your github username
